--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="A project by stacksmashing."
+      content="Github"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -68,7 +68,7 @@
     
       <footer class="mastfoot mt-auto">
         <div class="inner">
-          <p>A project by <a href="https://youtube.com/stacksmashing">stacksmashing</a>.</p>
+          <p>Source at <a href="https://github.com/starlarkus/gb-tetris-web">github</a>.</p>
           <!-- <p>Cover template for <a href="https://getbootstrap.com/">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p> -->
         </div>
       </footer>
