--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
     <footer class="mastfoot mt-auto">
       <div class="inner">
-        <p>Source at <a href="https://github.com/starlarkus/gb-tetris-web">github</a>.</p>
+        <p>Source at <a href="https://github.com/starlarkus/gb-tetris-web">GitHub</a>.</p>
       </div>
     </footer>
   </div>
