Revert "undo changes to main"
This reverts commit 219c75155fcf5a2fec90a0036d74539a0157d4a0.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <p>Connect your Game Boy with the USB to Game Link adapter and click "connect".</p>
           <button id="btn-connect" class="btn btn-lg btn-secondary">Connect</button>
           <br />
-          <small>Version: 1.0.3</small>
+          <small>Version: 1.0.7</small>
         </div>
 
         <!-- Screen: Connecting -->
@@ -112,7 +112,7 @@
                       <h4>Join game</h4>
                     </div>
                     <div class="card-text">
-                      <input type="text" id="game-code-input" class="form-control game-code-input" placeholder="ABCD" />
+                      <input type="text" id="game-code-input" class="form-control game-code-input" placeholder="1234" />
                       <button id="btn-join-game" class="btn btn-lg btn-secondary">Join</button>
                     </div>
                   </div>
