numbers for lobby names
Makes it easier for cross platform clients to enter codes to use numbers instead of letters

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                       <h4>Join game</h4>
                     </div>
                     <div class="card-text">
-                      <input type="text" id="game-code-input" class="form-control game-code-input" placeholder="ABCD" />
+                      <input type="text" id="game-code-input" class="form-control game-code-input" placeholder="1234" />
                       <button id="btn-join-game" class="btn btn-lg btn-secondary">Join</button>
                     </div>
                   </div>
