Only host to restart game
Requires the host to start next game. Other players displays wait message

--- a/index.html
+++ b/index.html
@@ -172,7 +172,12 @@
             <div id="finished-players" class="row justify-content-center"></div>
           </div>
           <h2>Game finished!</h2>
-          <button id="btn-finished-next" class="btn btn-lg btn-secondary">Start next game!</button>
+          <div id="finished-admin-controls">
+            <button id="btn-finished-next" class="btn btn-lg btn-secondary">Start next game!</button>
+          </div>
+          <div id="finished-waiting">
+            <p>Waiting for host to start next game...</p>
+          </div>
         </div>
 
         <!-- Screen: Error -->
