--- a/index.html
+++ b/index.html
@@ -196,7 +196,8 @@
 
     <footer class="mastfoot mt-auto">
       <div class="inner">
-        <p>Source at <a href="https://github.com/starlarkus/gb-tetris-web">GitHub</a>.</p>
+        <p>Requires <a href="https://github.com/starlarkus/gb-link-firmware-reconfigurable" target="_blank">USB
+            Firmware</a> - <a href="https://github.com/starlarkus/gb-tetris-web" target="_blank">Source</a></p>
       </div>
     </footer>
   </div>
