--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <p>Connect your Game Boy with the USB to Game Link adapter and click "connect".</p>
           <button id="btn-connect" class="btn btn-lg btn-secondary">Connect</button>
           <br />
-          <small>Version: 1.0.24</small>
+          <small>Test Version: 1.1.0</small>
         </div>
 
         <!-- Screen: Connecting -->
