--- a/index.html
+++ b/index.html
@@ -86,6 +86,65 @@
           <button id="btn-music-next" class="btn btn-lg btn-secondary">Next</button>
         </div>
 
+        <!-- Screen: Mode Selection (Find Match / Private Lobby) -->
+        <div id="screen-mode-select" class="screen connect">
+          <h2>Select Game Mode</h2>
+          <p class="lead">Play with anyone or create a private lobby!</p>
+          <hr />
+          <div class="container">
+            <div class="row justify-content-center">
+              <div class="col-6">
+                <div class="card custom-card">
+                  <div class="card-body">
+                    <div class="card-title">
+                      <h4>Find Match</h4>
+                    </div>
+                    <div class="card-text">
+                      <p>Get matched with a random opponent</p>
+                      <button id="btn-find-match" class="btn btn-lg btn-secondary">Find Match</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-6">
+                <div class="card custom-card">
+                  <div class="card-body">
+                    <div class="card-title">
+                      <h4>Private Lobby</h4>
+                    </div>
+                    <div class="card-text">
+                      <p>Create or join a private game</p>
+                      <button id="btn-private-lobby" class="btn btn-lg btn-secondary">Private Lobby</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Screen: Matchmaking (Finding Opponent) -->
+        <div id="screen-matchmaking" class="screen connect">
+          <h2>Finding Opponent...</h2>
+          <p>Please wait while we find you a match!</p>
+          <div class="spinner-border text-light" role="status">
+            <span class="sr-only">Loading...</span>
+          </div>
+          <hr />
+          <button id="btn-cancel-matchmaking" class="btn btn-lg btn-secondary">Cancel</button>
+        </div>
+
+        <!-- Screen: Opponent Disconnected -->
+        <div id="screen-opponent-disconnect" class="screen connect">
+          <h2>Opponent Disconnected</h2>
+          <p>Your opponent has left the game. You win!</p>
+          <hr />
+          <p><strong>Please restart Tetris on your Game Boy before continuing.</strong></p>
+          <h4>Find another match?</h4>
+          <button id="btn-rematch" class="btn btn-lg btn-secondary">Find Match</button>
+          <button id="btn-back-to-menu" class="btn btn-lg btn-secondary">Back to Menu</button>
+        </div>
+
         <!-- Screen: Select Game (Create/Join) -->
         <div id="screen-select-game" class="screen connect">
           <h2>Select a username:</h2>
