Next round in matchmaking fix

--- a/index.html
+++ b/index.html
@@ -237,6 +237,11 @@
           <div id="finished-waiting">
             <p>Waiting for host to start next game...</p>
           </div>
+          <div id="finished-matchmaking-controls" style="display:none;">
+            <button id="btn-ready-next" class="btn btn-lg btn-secondary">Start Next Round</button>
+            <p id="finished-countdown" style="display:none;"></p>
+            <p id="finished-ready-status"></p>
+          </div>
         </div>
 
         <!-- Screen: Error -->
