restart matchmaking on oponent disconnect

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <p>Connect your Game Boy with the USB to Game Link adapter and click "connect".</p>
           <button id="btn-connect" class="btn btn-lg btn-secondary">Connect</button>
           <br />
-          <small>Test Version: 1.1.2</small>
+          <small>Test Version: 1.1.3</small>
         </div>
 
         <!-- Screen: Connecting -->
@@ -103,7 +103,7 @@
                       <h4>Find Match</h4>
                     </div>
                     <div class="card-text">
-                      <p>Get matched with a random opponent</p>
+                      <p>Match with random opponent</p>
                       <button id="btn-find-match" class="btn btn-lg btn-secondary">Find Match</button>
                     </div>
                   </div>
