Show 'Matchmaking' label, join-error UI, fixes
Bump UI version and add join flow improvements and gameplay fixes. Updates include: version bump to 1.1.9; add a join-error element and a 'Back to Menu' button in the create/join screen with handler to return to mode select; display 'Matchmaking' instead of empty game codes when isMatchmaking is true across lobby, in-game, and finished screens; improve finished-admin logic to only enable "next" when the server reports the round is BETWEEN and after a short delay; clear previous join errors before joining and show a friendly 'Lobby not found' message (and reset GB connection) when gb errors indicate a missing lobby; show opponent-disconnect state and increase wait before reconnecting from 3s to 5s for mid-game wins; and change height-reporting logic to consider only alive opponents when computing and sending max heights.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <p>Connect your Game Boy with the USB to Game Link adapter and click "connect".</p>
           <button id="btn-connect" class="btn btn-lg btn-secondary">Connect</button>
           <br />
-          <small>Version: 1.1.8</small>
+          <small>Version: 1.1.9</small>
         </div>
 
         <!-- Screen: Connecting -->
@@ -162,7 +162,9 @@
               </div>
             </div>
           </div>
+          <p id="join-error" style="display:none; color:#ff6b6b; margin-top:10px; font-weight:bold;"></p>
           <hr />
+          <button id="btn-back-to-mode-select" class="btn btn-sm btn-secondary">Back to Menu</button>
         </div>
 
         <!-- Screen: Joining Game -->
